--- a/php/symfony/composer.json
+++ b/php/symfony/composer.json
@@ -3,17 +3,11 @@
   "license": "proprietary",
   "minimum-stability": "dev",
   "prefer-stable": true,
-  "repositories": [
-    {
-      "type": "path",
-      "url": "/Users/sam/code/enteka/enalog-php"
-    }
-  ],
   "require": {
     "php": ">=8.1",
     "ext-ctype": "*",
     "ext-iconv": "*",
-    "enalog/enalog-php": "dev-main",
+    "enalog/enalog-php": "^0.3.0",
     "symfony/console": "6.3.*",
     "symfony/dotenv": "6.3.*",
     "symfony/flex": "^2",
